@@ -37,6 +37,7 @@ int jswrap_banglejs_isCompassOn();
 bool jswrap_banglejs_setBarometerPower(bool isOn, JsVar *appId);
 int jswrap_banglejs_isBarometerOn();
 
+int jswrap_banglejs_getStepCount();
 JsVar *jswrap_banglejs_getCompass();
 JsVar *jswrap_banglejs_getAccel();
 JsVar *jswrap_banglejs_getPressure();
